<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"

            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLetsLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/let_s_login"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

        <TextView
            android:id="@+id/dontHaveAnAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/donTHaveAnAccTxt"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvLetsLogin" />

        <EditText
            android:id="@+id/etEmailLogin"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/dontHaveAnAccount" />

        <EditText
            android:id="@+id/etPassLogin"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password_login"
            android:padding="4dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/etPassLogin" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnLogin_Login"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="26dp"
            android:text="@string/login"
            app:spinning_bar_color="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordLogin" />

        <ImageView
            android:id="@+id/ivFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin_Login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_login"
            app:layout_constraintBottom_toBottomOf="@+id/ivFacebookLogin"
            app:layout_constraintEnd_toEndOf="@+id/ivFacebookLogin"
            app:layout_constraintStart_toStartOf="@id/ivFacebookLogin"
            app:layout_constraintTop_toTopOf="@id/ivFacebookLogin" />

        <ImageView
            android:id="@+id/ivGoogleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin_Login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_login"
            app:layout_constraintBottom_toBottomOf="@+id/ivGoogleLogin"
            app:layout_constraintEnd_toEndOf="@+id/ivGoogleLogin"
            app:layout_constraintStart_toStartOf="@id/ivGoogleLogin"
            app:layout_constraintTop_toTopOf="@id/ivGoogleLogin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>