<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRightAddressForShopping"
            android:text="@string/rightAddress"
            style="@style/h4"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="46dp"
           app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            android:text="@string/quality"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/tvRightAddressForShopping"
            app:layout_constraintEnd_toEndOf="@+id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterAccountOptions"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/register"
            style="@style/blueButtonStyle"
            android:elevation="@dimen/elevation"
            app:layout_constraintTop_toBottomOf="@id/tvQuality"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/login"
            style="@style/whiteButtonStyle"
            android:elevation="@dimen/elevation"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/btnRegisterAccountOptions"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>