<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/reset_password"
        android:fontFamily="@font/poppins_thin"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvResetPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/password_reset_link_tv"
        android:fontFamily="@font/poppins_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPassword"
        />
    
    <EditText
        android:id="@+id/etResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPasswordText"
        app:layout_constraintStart_toStartOf="@+id/tvResetPasswordText"
        app:layout_constraintEnd_toEndOf="@id/tvResetPasswordText"
        android:autofillHints="emailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etResetPassword"
        app:layout_constraintStart_toStartOf="@+id/etResetPassword"
        app:layout_constraintEnd_toEndOf="@+id/etResetPassword"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelResetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_dialog"
            android:layout_marginStart="5dp"
            android:layout_weight="2"
            android:layout_marginEnd="5dp"
            android:background="@drawable/white_background"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendResetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_send_dialog"
            android:layout_weight="2"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:background="@drawable/blue_background"
            android:textAllCaps="false"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>